--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "iconv-lite": "^0.6.3",
     "vue": "^3.4.21"
   },
   "devDependencies": {
