--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vite build && electron-builder",
     "preview": "vite preview"
   },
+  "win": {
+    "icon": "__dirname + 'public/logo.png'"
+  },
   "dependencies": {
     "encoding": "^0.1.13",
     "iconv-lite": "^0.6.3",
