--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,7 +1,7 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   $schema: 'https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json',
-  appId: 'txt-reader',
+  appId: 'reader-electron',
   asar: true,
   productName: 'Txt阅读器',
   directories: {
@@ -19,6 +19,7 @@
         arch: ['x64']
       }
     ],
+    icon: 'public/logo.png',
     artifactName: '${productName}-Windows-${version}-Setup.${ext}'
   },
   nsis: {
