--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -10,17 +10,21 @@
   files: ["dist", "dist-electron"],
   mac: {
     target: ["dmg"],
-    artifactName: "${productName}-Mac-${version}-Installer.${ext}"
+    artifactName: "${productName}-mac-${arch}-${version}.${ext}"
   },
   win: {
     target: [
       {
         target: "nsis",
-        arch: ["x64", "x32"]
+        arch: ["x64"]
+      },
+      {
+        target: "nsis",
+        arch: ["ia32"]
       }
     ],
     icon: "public/logo.png",
-    artifactName: "${productName}-Windows-${version}-Setup.${ext}"
+    artifactName: "${productName}-win-${arch}-${version}.${ext}"
   },
   nsis: {
     oneClick: false,
@@ -30,6 +34,6 @@
   },
   linux: {
     target: ["AppImage"],
-    artifactName: "${productName}-Linux-${version}.${ext}"
+    artifactName: "${productName}-linux-${arch}-${version}.${ext}"
   }
 }
