--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,30 +1,31 @@
 // @see - https://www.electron.build/configuration/configuration
 {
-  $schema: "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  appId: "reader-electron",
+  $schema: 'https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json',
+  appId: 'reader-electron',
   asar: true,
-  productName: "Txt阅读器",
+  productName: 'Txt阅读器',
   directories: {
-    output: "release/${version}"
+    output: 'release/${version}'
   },
-  files: ["dist", "dist-electron"],
+  files: ['dist', 'dist-electron'],
+  afterPack: './removeLocales.js',
   mac: {
-    target: ["dmg"],
-    artifactName: "${productName}-mac-${arch}-${version}.${ext}"
+    target: ['dmg'],
+    artifactName: '${productName}-mac-${arch}-${version}.${ext}'
   },
   win: {
     target: [
       {
-        target: "nsis",
-        arch: ["x64"]
+        target: 'nsis',
+        arch: ['x64']
       },
       {
-        target: "nsis",
-        arch: ["ia32"]
+        target: 'nsis',
+        arch: ['ia32']
       }
     ],
-    icon: "public/logo.png",
-    artifactName: "${productName}-win-${arch}-${version}.${ext}"
+    icon: 'public/logo.png',
+    artifactName: '${productName}-win-${arch}-${version}.${ext}'
   },
   nsis: {
     oneClick: false,
@@ -33,7 +34,7 @@
     deleteAppDataOnUninstall: false
   },
   linux: {
-    target: ["AppImage"],
-    artifactName: "${productName}-linux-${arch}-${version}.${ext}"
+    target: ['AppImage'],
+    artifactName: '${productName}-linux-${arch}-${version}.${ext}'
   }
 }
