--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "web": "vite --config ./vite.config.web.ts",
+    "web": "vite --config ./vite.config.web.ts --host",
     "buildweb": "vite build --config ./vite.config.web.ts",
     "build": "vite build && electron-builder",
     "preview": "vite preview",
@@ -13,15 +13,16 @@
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
+    "vconsole": "^3.15.1",
     "vue": "^3.5.14"
   },
   "devDependencies": {
-    "iconv-lite": "^0.7.0",
-    "jschardet": "^3.1.4",
     "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
+    "iconv-lite": "^0.7.0",
+    "jschardet": "^3.1.4",
     "sass": "^1.84.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
